--- a/index.html
+++ b/index.html
@@ -5,14 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFO</title>
 </head>
-<body>
-    <main>
-        <div>
+
+<body style="background-color:white;">
+    <main style="background-color: pink; display: inline-block; width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;">
+        <div style="background-color: aqua; width: 30%; float: left;">
             <h1>404</h1>
             <p>Page not found</p>
             <a href="#">Go home</a>
         </div>
-        <img src="#" alt="Ateiviu lekste kuri vagia musu daiktus">
+        <img style="background-color: blueviolet;  float: right; width: 60%; " src="./img/ufo.jpg" alt="Ateiviu lekste kuri vagia musu daiktus;">
     </main> 
 </body>
+
 </html>
+
+<!--
+
+style="stiliaus-savybe: stiliaus reiksme; kita savybe: kita, reiksme; savybe: reiksme;"
+
+style="
+    stiliaus-savybe: stiliaus reiksme; 
+    kita-savybe: kita, reiksme; 
+    savybe: reiksme;"
+
+SAVYVES:
+
+background-color: red;
+width: 100%;
+margin: 20%;
+
+display: block           is virsaus i apacia
+display: inline          elgiasi kaip tekstas
+display: inline-block    stengiasi buti vienoje eileje, bet jei netelpa, krenta i nauja eilute, bet nevirsija tevinio elemento
+
+float: left;             priverstinai stumti elementa nurodyta kryptimi iki kol atsitrenks i artimiausia elementa, arba teva
+float: right;            
+-->
