--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 
 <body style="background-color:white;">
-    <main style="background-color: pink; display: inline-block; width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;">
-        <div style="background-color: aqua; width: 30%; float: left;">
-            <h1>404</h1>
-            <p>Page not found</p>
-            <a href="#">Go home</a>
+    <main style="display: inline-block; width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;">
+        <div style="width: 35%; float: left;">
+            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;color: blue; font-size: 100px;">404</h1>
+            <p style="font-weight: bold;font-size: 38px; text-transform: uppercase; font-family:Verdana, Geneva, Tahoma, sans-serif ">Page not found</p>
+            <a style="font-size: 20px; text-decoration: none; border-radius: 30px; display: inline-block; padding: 10px; padding-right: 20px; padding-left: 20px ; border: 4px solid blue" href="#">Go home</a>
         </div>
-        <img style="background-color: blueviolet;  float: right; width: 60%; " src="./img/ufo.jpg" alt="Ateiviu lekste kuri vagia musu daiktus;">
+        <img style="float: right; width: 60%; " src="./img/ufo.jpg" alt="Ateiviu lekste kuri vagia musu daiktus;">
     </main> 
 </body>
 
@@ -35,7 +35,7 @@ width: 100%;
 margin: 20%;
 
 display: block           is virsaus i apacia
-display: inline          elgiasi kaip tekstas
+display: inline          elgiasi kaip tekstas (<a>, <span>)
 display: inline-block    stengiasi buti vienoje eileje, bet jei netelpa, krenta i nauja eilute, bet nevirsija tevinio elemento
 
 float: left;             priverstinai stumti elementa nurodyta kryptimi iki kol atsitrenks i artimiausia elementa, arba teva
