--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>UFO</title>
 </head>
 
-<body style="background-color:white;">
+<body style="background-color: white;">
     <main style="display: inline-block; width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;">
         <div style="width: 35%; float: left;">
-            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;color: blue; font-size: 100px;">404</h1>
+            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;color: #289BF0; font-size: 100px;">404</h1>
             <p style="font-weight: bold;font-size: 38px; text-transform: uppercase; font-family:Verdana, Geneva, Tahoma, sans-serif ">Page not found</p>
-            <a style="font-size: 20px; text-decoration: none; border-radius: 30px; display: inline-block; padding: 10px; padding-right: 20px; padding-left: 20px ; border: 4px solid blue" href="#">Go home</a>
+            <a style="font-size: 20px; color: #289BF0; text-decoration: none; border-radius: 30px; display: inline-block; padding: 10px; padding-right: 20px; padding-left: 20px ; border: 4px solid #289BF0" href="#">Go home</a>
         </div>
-        <img style="float: right; width: 60%; " src="./img/ufo.jpg" alt="Ateiviu lekste kuri vagia musu daiktus;">
+        <img style="float: right; width: 60%; " src="./img/ufo.webp" alt="Ateiviu lekste kuri vagia musu daiktus;">
     </main> 
 </body>
 
