--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="404 page for the website">
+    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>UFO</title>
 </head>
 
 <body style="background-color: white;">
     <main style="display: inline-block; width: 60%; margin-left: 20%; margin-right: 20%; margin-top: 10%;">
-        <div style="width: 35%; float: left;">
-            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;color: #289BF0; font-size: 100px;">404</h1>
-            <p style="font-weight: bold;font-size: 38px; text-transform: uppercase; font-family:Verdana, Geneva, Tahoma, sans-serif ">Page not found</p>
-            <a style="font-size: 20px; color: #289BF0; text-decoration: none; border-radius: 30px; display: inline-block; padding: 10px; padding-right: 20px; padding-left: 20px ; border: 4px solid #289BF0" href="#">Go home</a>
+        <div style="width: 35%; float: left; margin-top: 120px">
+            <h1 style="font-weight: bold; margin: 0; font-family: Mona Sans;color: #289BF0; font-size: 100px;">404</h1>
+            <p style="margin-top: 0; font-weight: bold;font-size: 38px; text-transform: uppercase; font-family:Mona Sans ">Page not found</p>
+            <a style="font-size: 20px; color: #289BF0; text-decoration: none; border-radius: 30px; display: inline-block; padding: 10px; padding-right: 20px; padding-left: 20px ; border: 4px solid #289BF0" href="#">Go to home</a>
         </div>
         <img style="float: right; width: 60%; " src="./img/ufo.webp" alt="Ateiviu lekste kuri vagia musu daiktus;">
     </main> 
